--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,8 +8,19 @@
 <h4 class="m-3"><strong>My Lists</strong></h4>
 <div class="cards">
   <% @lists.each do |list| %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://cdn.pixabay.com/photo/2020/02/27/18/54/popcorn-4885565_1280.jpg)">
-        <h3><%= link_to list.name, list_path(list), class:"btn btn-primary" %> </h3>
+    <% if list.photo.attached? %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
+    <% else %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://cdn.pixabay.com/photo/2020/02/27/18/54/popcorn-4885565_1280.jpg')">
+    <% end %>
+      <h3><%= link_to list.name, list_path(list), class:"btn btn-primary" %> </h3>
       </div>
   <% end %>
 </div>
+
+
+
+
+<%# Adding an image tag from cloudinary to page%>
+<%#= cl_image_tag("vvqg1vjgq845bjs9em0j",
+  width: 400, height: 300, crop: :fill) %>
