--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,18 +1,27 @@
-<div class="col-lg-6">
-  <h2>Movie List:</h2>
-  <h3><%= @list.name %></h3>
-  <div class="btn-style">
-    <p><%= link_to "Bookmark",  new_list_bookmark_path(@list), class: 'btn-book' %></p>
-    <p><%= link_to "Movie lists",  lists_path, class: 'btn-book' %></p>
+<% if @list.photo.attached? %>
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :fill %>')">
+<% else %>
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://cdn.pixabay.com/photo/2020/02/27/18/54/popcorn-4885565_1280.jpg')">
+<% end %>
+    <div class="container text-center">
+      <h1><strong><%= @list.name %></strong></h1>
+      <%= link_to "Bookmark",  new_list_bookmark_path(@list), class: 'btn btn-warning' %>
+      <%= link_to "Movie lists",  lists_path, class: 'btn btn-success' %>
+    </div>
   </div>
-</div>
 
-<div class="container">
+<div class="row my-2">
   <% @bookmarks.each do |bookmark| %>
-      <div class="card-category-2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://cdn.pixabay.com/photo/2020/02/27/18/54/popcorn-4885565_1280.jpg)">
-        <h3 style="writing-mode: horizontal-tb"><%= bookmark.movie.title %></h3>
-        <p style="writing-mode: horizontal-tb text-wrap"><%= bookmark.movie.overview %></p>
-        <p><%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "are you sure?" }, class: 'btn btn-danger pull-bottom' %></p>
+      <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://cdn.pixabay.com/photo/2020/02/27/18/54/popcorn-4885565_1280.jpg)">
+        <div class="bg-white rounded shadow h-100">
+          <div class="p-3 rounded-bottom d-flex flex-column">
+            <strong><%= bookmark.movie.title %></strong>
+            <small class="text-muted"><%= bookmark.movie.overview %></small>
+              <div class="d-flex align-items-end justify-content-between pt-4">
+                <small class="text-right flex-shrink-0"><%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "are you sure?" }, class: 'btn btn-danger pull-bottom' %></small>
+              </div>
+          </div>
+        </div>
       </div>
   <% end %>
 </div>
